[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petstore-domain"
version = "1.0.0"
description = "MMF plugin service for petstore-domain with comprehensive features"
authors = [{name = "Generated", email = "generated@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = ["--strict-markers", "--verbose"]
markers = [
    "asyncio: marks tests as asyncio tests"
]

[tool.setuptools]
packages = ["app"]
